create initial files > > co-authored-by: Tyson Lackey <lackeyt90@gmail.com>

--- a/index.html
+++ b/index.html
@@ -8,6 +8,13 @@
     <title></title>
   </head>
   <body>
-
-  </body>
+    <div id="input">
+      <form id="inputForm" class = "form-control">
+        <label for="todo">To-do:</label>
+        <input type="text" id="location">
+        <button type= "submit">Submit</button>
+      </form>
+    </div>
 </html>
+        
+       
