create initial files > > co-authored-by: Tyson Lackey <lackeyt90@gmail.com>

--- a/index.html
+++ b/index.html
@@ -10,10 +10,14 @@
   <body>
     <div id="input">
       <form id="inputForm" class = "form-control">
-        <label for="todo">To-do:</label>
-        <input type="text" id="location">
+        <label for="item">To-do:</label>
+        <input type="text" id="item">
+
         <button type= "submit">Submit</button>
       </form>
+    </div>
+    <div id="output">
+
     </div>
 </html>
         
