--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
         <button type= "submit">Submit</button>
       </form>
     </div>
-    <div id="output">
+    <form id="output" class="form-group">
 
-    </div>
+    </form>
 </html>
         
        
