add output update functionality > > co-authored-by: Tyson Lackey <lackeyt90@gmail.com>

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
     <form id="output" class="form-group">
 
     </form>
+    <button type = "button" id="update">Update</button>
 </html>
         
        
