add clear list functionality > > co-authored-by: Tyson Lackey <lackeyt90@gmail.com>

--- a/index.html
+++ b/index.html
@@ -19,7 +19,8 @@
     <form id="output" class="form-group">
 
     </form>
-    <button type = "button" id="update">Update</button>
+    <button type="button" id="update">Update</button>
+    <button type="button" id="reload">Clear List</button>
 </html>
         
        
